--- a/Green_Folder/Untitled.ipynb
+++ b/Green_Folder/Untitled.ipynb
@@ -4693,9 +4693,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (flatiron-env)",
+   "display_name": "Python (learn-env)",
    "language": "python",
-   "name": "flatiron-env"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4707,7 +4707,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
